# clickomator-v1

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: deploy-web.yml  release.yml
dev-dist/: registerSW.js  sw.js
docs/: icon.psd  logo.psd  prompt_clickomator.odt
public/: .htaccess
public/download/: Clickomator V1_0.1.0_x64_en-US.msi
scripts/: release.mjs
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  main.desktop  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  midi.rs  wakelock.rs
src/components/: BeatGraphic.tsx  MidiSettings.tsx  SongView.tsx  TempoVisualizer.tsx
src/components/ui/: Logo.tsx  resizable.tsx
src/hooks/: use-escape-fullscreen-toggle.ts
src/pages/: Index.tsx  Index.tsx.backup  Parameters.tsx  Setlist.tsx  Song.tsx
src/types/: webmidi.d.ts
src/utils/: assetPath.ts  downloads.ts  midiService.ts  wakeLock.ts
