[package]
name = "clickomator"
version = "2.1.0"
description = "Métronome audio et visuel"
authors = ["ZeN"]
license = ""
repository = ""
default-run = "clickomator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
# Cross-platform MIDI output for the metronome's MIDI clock feature.
# Linux backend: ALSA (requires libasound2-dev at build, libasound2 at runtime).
midir = "0.11"
# Cross-platform wake-lock so the host PC doesn't go to sleep mid-performance.
# Linux: tries logind / GNOME / Freedesktop ScreenSaver D-Bus services.
keepawake = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
